finished home and team page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -20,5 +20,6 @@ title: Le Wagon - Middleman - About
         </li>
       <% end %>
     </ul>
+    <%= link_to 'Navbar', 'http://localhost:4567/' %>
   </div>
 </div>
