--- a/source/stylesheets/layouts/_index.scss
+++ b/source/stylesheets/layouts/_index.scss
@@ -1,6 +1,6 @@
 ///@import "footer"
 // Import your layouts CSS files here.
 // Examples:
-// @import "dashboard";
+@import "user_dashboard";
 // @import "profile";
 // @import "map";
