--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -5,6 +5,9 @@
   background-position: center;
   color: white;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card-user {
   position: absolute;
@@ -19,11 +22,6 @@
   left: 10px;
   font-size: 15px;
   text-transform: uppercase;
-}
-.card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
 }
 .card-description h2 {
   font-size: 24px;
