--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,25 +1,26 @@
 .footer {
-  background: #F4F4F4;
+  background: $light-gray;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: $grey;
 }
 .footer-links {
   display: flex;
   align-items: center;
-}
-.footer-links a {
-  color: black;
-  opacity: 0.15;
+
+   a {
+  color: $grey;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
-}
-.footer-links a:hover {
+
+      a:hover {
   opacity: 1;
+    }
+  }
 }
 .footer .fa-heart {
   color: #D23333;
